--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,10 @@
   <strong>Posts:</strong>
   <%= @post.posts %>
 </p>
-
+<% if user_signed_in? %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+<%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %>
+<% else %>
+<%= link_to 'Back', '/blog' %>
+<% end %>
