feature: arcana interface

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,6 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url("./arcana/fontawesome-all.min.css");
+ @import url("./arcana/main.css");
