--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,6 +1,9 @@
-
-<a href="/index">Inicio</a> | 
-<a href="/acerca">Acerca</a> | 
-<a href="/servicios">Servicios</a> | 
-<a href="/blog">Blog</a> | 
-<a href="/contacto">Contacto</a> | 
+<nav id="nav">
+    <ul>
+        <li class="current"><a href="/index">Inicio</a></li>
+        <li><a href="/acerca">Acerca</a></li>
+        <li><a href="/servicios">Servicios</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/contacto">Contacto</a></li>
+    </ul>
+</nav>
