--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,18 +1,10 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px; }
-
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
 
 pre {
   background-color: #eee;
   padding: 10px;
   font-size: 11px; }
 
+  /*
 a {
   color: #000; }
 
@@ -22,7 +14,7 @@ a:visited {
 a:hover {
   color: #fff;
   background-color: #000; }
-
+*/
 th {
   padding-bottom: 5px; }
 
