--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_pack_tag 'application' %>
 
 	</head>
 	<body class="is-preload">
@@ -24,7 +24,8 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo" style="display:none">Greyhat Security</em></a></h1>
+						<%= image_tag  "logo_full_orig.png", style:"width:300px;margin:0" %>
 
 					<!-- Nav -->
             <%= render 'partials/navigation' %>
@@ -109,6 +110,8 @@
 				</div>
 
 		</div>
+
+        <%= javascript_pack_tag 'arcana' %>
 
 	</body>
 </html>
