feature: integraciones de imagen con arcana

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,52 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="row gtr-200">
+  <div class="col-8 col-12-narrower">
+    <div id="content">
+
+      <!-- Content -->
+
+      <article>
+        <header>
+          <h2>"Ethical Hacking" maximizado!</h2>
+        </header>
+
+        <p>En GreyHat Security tenemos una visión alternativa en "Ethical Hacking", con modernas metodologías y técnicas de pentesting para poner a prueba la seguridad de tus sistemas con pruebas controladas. </p>
+
+        <span class="image featured"><%= image_tag  "pic02.jpg" %></span>
+
+        <p>Como resultado, entregamos un informe técnico con las recomendaciones para corregir y mejorar la infraestructura.Deje que nosotros echemos un vistazo y prevenir antes de que "alguien más" lo haga. </p>
+
+      </article>
+
+    </div>
+  </div>
+  <div class="col-4 col-12-narrower">
+    <div id="sidebar">
+
+      <!-- Sidebar -->
+
+      <section>
+        <h3>¿Capacitación Gratuita?</h3>
+        <p>Brindamos charlas y capacitación al personal más vulnerable de su organización, con técnicas de protección efectivas para las amenazas del día a día. Contáctanos para mayor información.</p>
+        <footer>
+          <a href="#" class="button">Quiero una charla gratuita</a>
+        </footer>
+      </section>
+
+      <section>
+        <h3>Nuestros servicios</h3>
+        <ul class="links">
+          <li><a href="#">Auditoría de Sistemas WhiteBox/BlackBox</a></li>
+          <li><a href="#">Pentesting y Ethical Hacking</a></li>
+          <li><a href="#">Capacitación y Asesoría</a></li>
+          <li><a href="#">Pruebas de Phishing</a></li>
+        </ul>
+        <footer>
+          <a href="#" class="button">Catálogo completo</a>
+        </footer>
+      </section>
+
+    </div>
+  </div>
+</div>
+</div>
+</section>
