--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,113 +5,85 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Right Sidebar - Arcana by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<head>
+	<title>Right Sidebar - Arcana by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+	<%= csrf_meta_tags %>
+	<%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
+	<%= stylesheet_link_tag 'application', media: 'all' %>
+	<%= javascript_pack_tag 'application' %>
 
-	</head>
-	<body class="is-preload">
-		<div id="page-wrapper">
+</head>
+<body class="is-preload">
+	<div id="page-wrapper">
 
-			<!-- Header -->
-				<div id="header">
+		<!-- Header -->
+		<div id="header">
 
-					<!-- Logo -->
-						<h1><a href="index.html" id="logo" style="display:none">Greyhat Security</em></a></h1>
-						<%= image_tag  "logo_full_orig.png", style:"width:300px;margin:0" %>
+			<!-- Logo -->
+			<p><a href="index.html" id="logo" style="display:none">Greyhat Security</em></a>
+			<%= image_tag  "logo_full_orig.png", style:"width:300px;margin:0" %>
+			</p>
 
-					<!-- Nav -->
-            <%= render 'partials/navigation' %>
+			<!-- Nav -->
+			<%= render 'partials/navigation' %>
 
-				</div>
-
-			<!-- Main -->
-				<section class="wrapper style1">
-					<div class="container">
-						<%= yield %>
-					</div>
-				</section>
-
-			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
-						</div>
-					</div>
-
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+		</div>
+		<section class="wrapper style1">
+			<div class="container">
+				<%= yield %>
+			</div>
+		</section>
+		<!-- Footer -->
+		<div id="footer">
+			<div class="container">
+				<div class="row">
+					<section class="col-3 col-6-narrower col-12-mobilep">
+						<h3>Ultimos Artículos</h3>
+						<ul class="links">
+							<li><a href="#">Defininendo Phising</a></li>
+							<li><a href="#">Atacando Alexa, Google Home, y otros</a></li>
+							<li><a href="#">Como hackear un banco</a></li>
 						</ul>
+					</section>
+					<section class="col-3 col-6-narrower col-12-mobilep">
+						<h3>Podcast</h3>
+						<ul class="links">
+							<li><a href="#">Episodio 7 - Privacidad y diversión</a></li>
+							<li><a href="#">Episodio 6 - Facebook de la muerte</a></li>
+							<li><a href="#">Episodio 5 - Paranoia</a></li>
+						</ul>
+					</section>
+					<section class="col-6 col-12-narrower">
+						<h3>Algo algo</h3>
 
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
+						..........
 
+					</section>
 				</div>
+			</div>
+
+			<!-- Icons -->
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+			</ul>
+
+			<!-- Copyright -->
+			<div class="copyright">
+				<ul class="menu">
+					<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
 
 		</div>
 
-        <%= javascript_pack_tag 'arcana' %>
+	</div>
 
-	</body>
+	<%= javascript_pack_tag 'arcana' %>
+
+</body>
 </html>
