--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,17 +3,22 @@
 
 <p>
   <strong>Greyhat Security</strong> surge con la visión de proveer servicios de
-  hacking ético con un enfoque en la capacitación, donde la misión principal es
-  proveer herramientas a nuestros clientes que permitan prevenir y proteger el
-  bien más preciado para cualquier individuo u organización: su información.
+  hacking ético incluyendo a su vez capacitación. La misión es proveer herramientas
+  a nuestros clientes que permitan prevenir y proteger el bien más preciado para
+  cualquier individuo u organización: su información.
 </p>
 
 <p>
-  Nuestra amplia experiencia en el adistramiento a distancia y la capacitación
-  en persona, nos permite enfocarnos en nuestra visión de ser una empresa
-  "alternativa" en el hacking y el pentesting, además de poseer profesionales
-  certificados y altamente preparados con una larga experiencia laboral para
-  brindar estos servicios con la mayor calidad posible.
+  Nuestra amplia experiencia en capacitación a distancia y en persona,
+  nos permite enfocarnos en la visión de ser una empresa "alternativa" de
+  hacking para compartir la mayor cantidad de conocimiento posible con nuestros
+  clientes.
+</p>
+
+<p>
+  Contamos con personal certificado y gran experiencia tanto laboral como
+  didáctica, lo que nos permite unificar un servicio de álto nivel en Hacking y
+  Desarrollo así como capacitación y transfernecia de conocimiento.
 </p>
 
 <h2>Nosotros</h2>
@@ -23,17 +28,19 @@
 
   <strong>Alex Barrios</strong> / <em>Fundador</em><br>
   <a href="http://linkedin.com/in/alexbariv/" target="_blank"><span class="icon brands fa-linkedin"></span></a>
+
   <br>
-  Profesional con 15 años de experiencia en distintos campos de las tecnologías de información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en seguridad informática. Proactivo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando en grupos y entornos colaborativos, certificado en:
+
+  Profesional con 15 años de experiencia en distspanintos campos de las tecnologías de información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en seguridad informática. Proactivo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando en grupos y entornos colaborativos, certificado en:
 
   <ul class="feature-icons">
-    <li class="icon fa-laptop">Offensive Security Certified Professional (OSCP)</li>
-    <li class="icon fa-bomb">Offensive Security Certified Expert (OSCE)</li>
-    <li class="icon fa-signal">Offensive Security Wireless Professional (OSWP)</li>
-    <li class="icon fa-gear">University of Maryland: Hardware Security</li>
-    <li class="icon fa-map-marker">University of Maryland: Software Security</li>
-    <li class="icon fa-universal-access">University of Maryland: Usable Security</li>
-    <li class="icon fa-globe">Offensive Security Web Expert (en curso)</li>
+    <li class="fas fa-laptop">Offensive Security Certified Professional (OSCP)</li>
+    <li class="fas fa-bomb">Offensive Security Certified Expert (OSCE)</li>
+    <li class="fas fa-signal">Offensive Security Wireless Professional (OSWP)</li>
+    <li class="fas fa-shield-alt">University of Maryland: Hardware Security</li>
+    <li class="fas fa-map-marker">University of Maryland: Software Security</li>
+    <li class="fas fa-universal-access">University of Maryland: Usable Security</li>
+    <li class="fas fa-globe">Offensive Security Web Expert (en curso)</li>
   </ul>
 
 </p>
