--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -31,16 +31,5 @@
 
   <br>
 
-  Profesional con 15 años de experiencia en distspanintos campos de las tecnologías de información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en seguridad informática. Proactivo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando en grupos y entornos colaborativos, certificado en:
-
-  <ul class="feature-icons">
-    <li class="fas fa-laptop">Offensive Security Certified Professional (OSCP)</li>
-    <li class="fas fa-bomb">Offensive Security Certified Expert (OSCE)</li>
-    <li class="fas fa-signal">Offensive Security Wireless Professional (OSWP)</li>
-    <li class="fas fa-shield-alt">University of Maryland: Hardware Security</li>
-    <li class="fas fa-map-marker">University of Maryland: Software Security</li>
-    <li class="fas fa-universal-access">University of Maryland: Usable Security</li>
-    <li class="fas fa-globe">Offensive Security Web Expert (en curso)</li>
-  </ul>
-
+  Profesional con 15 años de experiencia en distspanintos campos de las tecnologías de información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en seguridad informática. Proactivo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando en grupos y entornos colaborativos.:
 </p>
