--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Contacts</h1>
 
 <table>
@@ -23,3 +22,4 @@
       </tr>
     <% end %>
   </tbody>
+</table>
