--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-	<title>Right Sidebar - Arcana by HTML5 UP</title>
+	<title>Greyhat Security - The Real Ethical Hacking</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
@@ -39,43 +39,20 @@
 		</section>
 		<!-- Footer -->
 		<div id="footer">
-			<div class="container">
-				<div class="row">
-					<section class="col-3 col-6-narrower col-12-mobilep">
-						<h3>Ultimos Artículos</h3>
-						<ul class="links">
-							<li><a href="#">Defininendo Phising</a></li>
-							<li><a href="#">Atacando Alexa, Google Home, y otros</a></li>
-							<li><a href="#">Como hackear un banco</a></li>
-						</ul>
-					</section>
-					<section class="col-3 col-6-narrower col-12-mobilep">
-						<h3>Podcast</h3>
-						<ul class="links">
-							<li><a href="#">Episodio 7 - Privacidad y diversión</a></li>
-							<li><a href="#">Episodio 6 - Facebook de la muerte</a></li>
-							<li><a href="#">Episodio 5 - Paranoia</a></li>
-						</ul>
-					</section>
-					<section class="col-6 col-12-narrower">
-						<h3>Algo algo</h3>
 
-						..........
-
-					</section>
-				</div>
-			</div>
 
 			<!-- Icons -->
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://www.twitter.com/greyhat_se" class="icon brands fa-twitter"  target="_blank"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.linkedin.com/company/greyhat-se/" class="icon brands fa-linkedin-in"  target="_blank"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://www.youtube.com/channel/UC6UyHXoDUuv3RDjCkm_Cwaw" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
+
 			</ul>
 
 			<!-- Copyright -->
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Greyhat Security - All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 
