--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :posts %>
-    <%= form.text_area :posts %>
+    <%= form.label :body %>
+    <%= form.text_area :body %>
   </div>
 
   <div class="actions">
