--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -1,22 +1,25 @@
-<h1>Posts</h1>
-
 <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Posts</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
+
     <% @posts.each do |post| %>
+
       <tr>
-        <td><%= post.title %></td>
-        <td><%= post.posts %></td>
-        <td><%= link_to 'Show', post %></td>
+        <td>
+          <strong><%= post.title %></strong>
+          <div style="font-size:small"><em><%= post.created_at.strftime("%d %b. %Y") %></em></div>
+        </td>
       </tr>
+
+      <tr>
+        <td><%= post.body.at(0..200) %> ... [<%= link_to ' Leer ', post %>]</td>
+      </tr>
+
+      <tr>
+        <td>&nbsp;</td>
+      </tr>
+
     <% end %>
+
   </tbody>
 </table>
 
