--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
 
-<p>
-  <strong>Posts:</strong>
-  <%= @post.posts %>
-</p>
-<% if user_signed_in? %>
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
-<%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %>
-<% else %>
-<%= link_to 'Back', '/blog' %>
-<% end %>
+<article>
+  <header>
+    <h2><%= @post.title %></h2>
+    <p><%= @post.created_at.strftime("%d %b. %Y") %></p>
+  </header>
+
+  <%= markdown(@post.body) %>
+
+  <%= link_to "Volver", "/blog"%>
+
+</article>
+
