--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,5 @@
  *= require_self
  */
 
- @import '@fortawesome/fontawesome-free';
- @import url("./arcana/main.css");
+ @import '@fortawesome/fontawesome-free/css/all.min.css';
+ @import './arcana/main.css';
