--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,12 +4,12 @@
 <article>
   <header>
     <h2><%= @post.title %></h2>
-    <p><%= @post.created_at.strftime("%d %b. %Y") %></p>
+    <p><%= @post.created_at.strftime("%d %b. %Y") %> | <%= link_to "Volver", "/articulos"%></p>
   </header>
 
   <%= markdown(@post.body) %>
 
-  <%= link_to "Volver", "/blog"%>
+  <%= link_to "Volver", "/articulos"%>
 
 </article>
 
