--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,15 +1,35 @@
-<p>
-  <h2>Servicios</h2>
+<div class="row">
+  <div class="col-6">
 
-  <h3>Auditoría de Sistemas WhiteBox/BlackBox</h3>
-  <p>Permite probar su aplicación / api / sistema, para localizar posibles vulnerabilidades y evaluar fugas de información.</p>
+    <h2>Servicios</h2>
+    <p>
+    El listado a continuación sirve de referencia para nuestros clientes, sin embargo, cabe destacar que no son limitantes, y pueden adaptarse perfectamente a sus necesidades luego de una reunión formal donde podemos elaborar una oferta personalizada. Entre los servicios más solicitados podemos listar:
+    </p>
 
-  <h3>Pentesting y Ethical Hacking</h3>
-  <p>Verifique las defensas de sus sistemas, donde probamos el nivel de exposición de su infraestructura tecnológica.</p>
+    <h3>Auditoría WhiteBox</h3>
+    <p>"WhiteBox" se refiere a pruebas con acceso al código fuente y configuración del servidor, donde se pueden corroborar las fallas con una revisión cuidadosa de la programación de la aplicación.</p>
 
-  <h3>Capacitación y Asesoría</h3>
-  <p>Cursos y consultorías adaptados a las necesidades de su personal en distintas áreas, con un enfoque en seguridad informática.</p>
+    <h3>Auditoría BlackBox</h3>
+    <p>En este caso el cliente indica la dirección del sistema o aplicación a verificar sin proveer acceso al código fuente ni a la configuración del servidor. Una revisión de este tipo busca simular un ataque real.</p>
 
-  <h3>Pruebas de Phishing</h3>
-  <p>Evalúe la cultura de su personal, y cuan preparados están a la hora de enfrentar contenidos maliciosos.</p>
-</p>
+   <h3>Capacitación y Asesoría</h3>
+   <p>Cursos y consultorías adaptados a las áreas que desea fortalecer, desde entrenamiento básico en seguridad de la información, cómo realizar pruebas de penetración de sistemas, hasta implementar las políticas recuperación ante fallos.</p>
+
+ </div>
+
+  <div class="col-6">
+
+
+    <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/59lBBL8HuzE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+
+
+    <h3>Pentesting y Ethical Hacking</h3>
+    <p>Similar a las pruebas BlackBox, se busca tomar el control de la aplicación e ir un paso más allá, donde se explotan las vulnerabilidades del sistema para conseguir acceso a la red interna con los privilegios más altos.</p>
+
+     <h3>Pruebas de Phishing</h3>
+     <p>Evalúe la cultura de su personal ante las amenazas más comunes y sofisticadas, y reciba capacitación para estar preparados a la hora de enfrentar contenidos maliciosos como "<a href="https://www.greyhat.cl/posts/una-definicion-de-spear-phishing">Spear Phishing"</a></p>
+
+
+  </div>
+
+</div>
