fix: home y servicios

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -26,7 +26,7 @@
 
       <section>
         <h3>¿Capacitación Gratuita?</h3>
-        <p>Brindamos charlas y capacitación al personal más vulnerable de su organización, con técnicas de protección efectivas para las amenazas del día a día. Contáctanos para mayor información.</p>
+        <p>Brindamos charlas y capacitación acerca de técnicas de protección efectivas para las amenazas del día a día, aseguramiento y <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros.</p>
         <footer>
           <%= link_to "Quiero una charla gratuita", '/contacto', class: "button" %>
         </footer>
