fix: grosor fuente, textos index

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,14 +6,16 @@
 
       <article>
         <header>
-          <h2>"Ethical Hacking" maximizado!</h2>
+          <h2>El Verdadero Ethical Hacking</h2>
         </header>
 
-        <p>En GreyHat Security tenemos una visión alternativa en "Ethical Hacking", con modernas metodologías y técnicas de pentesting para poner a prueba la seguridad de tus sistemas con pruebas controladas. </p>
+        <p>En GreyHat Security tenemos una visión alternativa en "Ethical Hacking", con modernas metodologías y técnicas de pentesting para poner a prueba la seguridad de tus sistemas simulando ataques reales y usuarios malintencionados.</p>
 
         <span class="image featured"><%= image_tag  "pic02.jpg" %></span>
 
-        <p>Como resultado, entregamos un informe técnico con las recomendaciones para corregir y mejorar la infraestructura.Deje que nosotros echemos un vistazo y prevenir antes de que "alguien más" lo haga. </p>
+        <p>Una vez completado el proceso, se proveé al cliente con capacitación, consultoría y un informe técnico con las recomendaciones para corregir, mejorar la infraestructura y fortalecer la seguridad de su activo más importante: <strong>la información</strong>.
+        </p>
+        <p>Permita que nosotros echemos un vistazo con pruebas controladas y prevenir antes de que "alguien más" lo haga. </p>
 
       </article>
 
