--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,13 +9,11 @@
           <h2>El Verdadero Ethical Hacking</h2>
         </header>
 
-        <p>En GreyHat Security tenemos una visión alternativa en "Ethical Hacking", con modernas metodologías y técnicas de pentesting para poner a prueba la seguridad de tus sistemas simulando ataques reales y usuarios malintencionados.</p>
+        <p>En <strong>GreyHat Security</strong> nuestro principal enfoque es la “prevención por educación”, donde una vez completado el proceso de penetración de sistemas (pentesting), nuestros clientes cuentan con un informe detallado de los resultados, posibles vulnerabilidades y vectores de ataque, además de consultoría y capacitación necesaria para implementar las recomendaciones permitiendo corregir, mejorar y fortalecer la seguridad de su infraestructura tecnológica y el activo más importante: <strong>la información</strong>. </p>
 
         <span class="image featured"><%= image_tag  "pic02.jpg" %></span>
-
-        <p>Una vez completado el proceso, se proveé al cliente con capacitación, consultoría y un informe técnico con las recomendaciones para corregir, mejorar la infraestructura y fortalecer la seguridad de su activo más importante: <strong>la información</strong>.
-        </p>
-        <p>Permita que nosotros echemos un vistazo con pruebas controladas y prevenir antes de que "alguien más" lo haga. </p>
+ 
+        <p>Permita que nosotros echemos un vistazo con pruebas controladas que lo ayuden a prevenir antes de que “alguien más” lo haga.</p>
 
       </article>
 
@@ -28,7 +26,7 @@
 
       <section>
         <h3>¿Capacitación Gratuita?</h3>
-        <p>Brindamos charlas y capacitación acerca de técnicas de protección efectivas para las amenazas del día a día, aseguramiento y <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros.</p>
+        <p>Brindamos charlas y capacitación acerca de técnicas de protección efectivas para las amenazas del día a día, aseguramiento, <a href="https://www.greyhat.cl/posts/como-mejorar-tu-seguridad-y-privacidad-en-linea-rapidamente">buenas prácticas</a> para nuestra vida digital, entre otros.</p>
         <footer>
           <%= link_to "Quiero una charla gratuita", '/contacto', class: "button" %>
         </footer>
