--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,5 +23,5 @@
       <meta name="twitter:site" content="@greyhat_se">
       <meta name="twitter:creator" content="@greyhat_se">
       <meta name="twitter:title" content="<%= @post.title %>">
-      <meta name="twitter:description" content="<%= post.body.at(0..200) %>">
-      <meta name="twitter:image" content="<%=image_tag url_for(@post.image)%>">
+      <meta name="twitter:description" content="<%= @post.body.at(0..200) %>">
+      <meta name="twitter:image" content="https://greyhat.cl<%=url_for(@post.image)%>">
