layout fix, added acclaim badges

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,30 +1,33 @@
+<section class="wrapper style1">
+	<div class="container">
+		<h2>Acerca de</h2>
 
-<h2>Acerca de</h2>
+		<p>
+			<strong>Greyhat Security</strong> surge con la visión de proveer servicios de Hacking Ético incluyendo a su vez capacitación. La misión es proveer herramientas a nuestros clientes que permitan prevenir y proteger el bien más preciado para cualquier individuo u organización: <strong>la información</strong>. 
+		</p>
 
-<p>
-  <strong>Greyhat Security</strong> surge con la visión de proveer servicios de Hacking Ético incluyendo a su vez capacitación. La misión es proveer herramientas a nuestros clientes que permitan prevenir y proteger el bien más preciado para cualquier individuo u organización: <strong>la información</strong>. 
-</p>
+		<p>
+			Nuestra amplia experiencia en capacitación con modalidades a distancia y presenciales, nos permite enfocarnos en la visión de ser una empresa "alternativa" de Hacking donde el principal objetivo sea compartir la mayor cantidad de conocimiento con nuestros clientes. 
+		</p>
 
-<p>
-  Nuestra amplia experiencia en capacitación con modalidades a distancia y presenciales, nos permite enfocarnos en la visión de ser una empresa "alternativa" de Hacking donde el principal objetivo sea compartir la mayor cantidad de conocimiento con nuestros clientes. 
-</p>
+		<p>
+			Contamos con personal certificado y gran experiencia tanto laboral como didáctica, lo que nos permite unificar un servicio de alto nivel en Hacking y Desarrollo así como capacitación y transferencia de conocimiento. 
+		</p>
 
-<p>
-  Contamos con personal certificado y gran experiencia tanto laboral como didáctica, lo que nos permite unificar un servicio de alto nivel en Hacking y Desarrollo así como capacitación y transferencia de conocimiento. 
-</p>
+		<h2>Nosotros</h2>
 
-<h2>Nosotros</h2>
+		<p>
+			<%= image_tag "avatar.jpg", style:"width:180px;border-radius:50%;margin-right:20px", align:'left' %>
 
-<p>
-  <%= image_tag "avatar.jpg", style:"width:180px;border-radius:50%;margin-right:20px", align:'left' %>
+			<strong>Alex Barrios</strong> / <em>Fundador</em><br>
+			<a href="http://linkedin.com/in/alexbariv/" target="_blank"><span class="icon brands fa-linkedin"></span></a>
 
-  <strong>Alex Barrios</strong> / <em>Fundador</em><br>
-  <a href="http://linkedin.com/in/alexbariv/" target="_blank"><span class="icon brands fa-linkedin"></span></a>
+			<br>
 
-  <br>
-
-CEO y Fundador de Greyhat Security, es un profesional con más de 15 años de experiencia en distintos campos de las tecnologías de información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en seguridad informática (OSCP, OSCE, OSWP, Hardware Security, Software Security, Usable Security).
-<br><br>
-Pro-activo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando en grupos y entornos colaborativos. 
-A dictado numerosas conferencias en temas como programación de aplicaciones eficientes, demostraciones en vivo de hacking a sistemas remotos, entre otros. Una de las más exitosas: <em>“Paranoia, como sobrevivir a los peligros del Internet”</em>, demostraba en vivo el proceso desde identificación de un objetivo, ingeniería social necesaria, hasta obtener acceso total al servidor remoto. 
-</p>
+			CEO y Fundador de Greyhat Security, es un profesional con más de 15 años de experiencia en distintos campos de las tecnologías de información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en seguridad informática (OSCP, OSCE, OSWP, Hardware Security, Software Security, Usable Security).
+			<br><br>
+			Pro-activo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando en grupos y entornos colaborativos. 
+			A dictado numerosas conferencias en temas como programación de aplicaciones eficientes, demostraciones en vivo de hacking a sistemas remotos, entre otros. Una de las más exitosas: <em>“Paranoia, como sobrevivir a los peligros del Internet”</em>, demostraba en vivo el proceso desde identificación de un objetivo, ingeniería social necesaria, hasta obtener acceso total al servidor remoto. 
+		</p>
+	</div>
+</section>
