--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,8 @@
-<p id="notice"><%= notice %></p>
 
-<%= render 'form', contact: @contact %>
+<section class="wrapper style1">
+	<div class="container">
+		<p id="notice"><%= notice %></p>
+
+		<%= render 'form', contact: @contact %>
+	</div>
+</section>
