Switch from boostrap, to primitive

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,8 +1,6 @@
 
-<section class="wrapper style1">
-	<div class="container">
-		<p id="notice"><%= notice %></p>
+<div class="medium-container">
+<p id="notice"><%= notice %></p>
 
-		<%= render 'form', contact: @contact %>
-	</div>
-</section>
+<%= render 'form', contact: @contact %>
+</div>
